figue/tests/integration/snapshots/main__integration__subcommand__missing_nested_subcommand_error.snap
---
source: crates/figue/tests/integration/subcommand.rs
expression: "strip_ansi_escapes :: strip_str(& err.to_string())"
---
Error: expected a subcommand

available subcommands:
  generate  Generate CI workflow files from Rust code
