figue/tests/integration/snapshots/main__integration__subcommand__missing_subcommand_error.snap
---
source: tests/integration/subcommand.rs
expression: "$crate :: common :: strip_ansi(& err.to_string())"
---
Error: Missing required fields:

Sources:
  cli --settings.*
  defaults

command  ❌ MISSING <Command> 

Run with --help for usage information.
